fixing navigation visibility

--- a/src/components/catalog/catalog.module.css
+++ b/src/components/catalog/catalog.module.css
@@ -3,5 +3,4 @@
     flex-wrap: wrap;
     gap: 20px;
     padding: 100px;
-    z-index: -1;
 }
