--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -3,6 +3,7 @@
     top: 50px;
     left: 0;
     right: 0;
+    z-index: 1;
 }
 
 .bg-body-tertiary{
@@ -13,4 +14,5 @@ height: 70px;
     height: 70px;
     width: 70px;
 }
+
 
