--- a/src/components/recipeCard/recipeCard.module.css
+++ b/src/components/recipeCard/recipeCard.module.css
@@ -1,6 +1,13 @@
+.card-container {
+    width: '18rem';
+    cursor: pointer;
+    /* z-index: -1; */
+}
+
 .card-image {
     width: 100%;
     height: 250px;
     object-fit: cover;
     object-position: center;
 }
+
